# docustruct-ai

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
docs/: api.md  architecture.md  data_model.md  evaluation.md  modules.md  review_workflow.md  roadmap.md
examples/curl/: get_result.sh  submit_review.sh  upload_invoice.sh
examples/evaluation/: invoice_benchmark.json
examples/expected/: act_result.json  contract_result.json  invoice_result.json
examples/fixtures/: act_demo.json  contract_demo.json  invoice_demo.json  noisy_invoice.json
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_job_worker_metadata.py
schemas/: act.schema.json  contract.schema.json  invoice.schema.json
scripts/: compare_benchmarks.py  generate_demo_documents.py  run_api.sh  run_benchmark.py  run_worker.sh  smoke_api_flow.py  smoke_async_flow.py  smoke_compose.sh  smoke_pipeline.py
src/docustruct_ai/: config.py  logging.py  main.py
src/docustruct_ai/api/: schemas.py
src/docustruct_ai/confidence/: __init__.py  service.py
src/docustruct_ai/core/: types.py
src/docustruct_ai/db/: session.py
src/docustruct_ai/evaluation/: service.py  types.py
tests/: conftest.py  test_api_flows.py  test_api_health.py  test_benchmark_cli.py  test_compare_benchmarks_cli.py  test_confidence_routing.py  test_evaluation.py  test_extraction_documents.py  test_extraction_invoice.py  test_pipeline_multidoc.py  test_review_workflow.py  test_validation.py  test_vlm_fallback.py
(+50 files in other folders)
