[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docustruct-ai"
version = "0.1.0"
description = "Hybrid Document AI platform for structured extraction, grounding, validation, review and evaluation."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "docustruct-ai contributors"}
]
dependencies = [
  "alembic>=1.13.1",
  "celery>=5.4.0",
  "fastapi>=0.111.0,<0.112.0",
  "jinja2>=3.1.4",
  "pydantic>=2.7.1",
  "pydantic-settings>=2.2.1",
  "python-dateutil>=2.9.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.30",
  "structlog>=24.1.0",
  "uvicorn>=0.30.0",
  "redis>=5.0.4",
  "psycopg[binary]>=3.1.19",
  "pymupdf>=1.24.4"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<0.28.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "reportlab>=4.2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
